# AhriProject

./: .gitignore  README.md  README0.md  env.sample  main.py  requirements.txt  transportation.py
calendar/: calendar.py
calender/: data.json
cmds/: admin.py  bus.py  calendar.py  calender.py  cov19.py  foodmap.py  help.py  news.py  react.py  transportation.py  washing.py  weather.py
cmds/datafunction/: newannouncement.py
datafunction/: cov19.py  foodmap.py  newannouncement.py  transportation.py  transportationAPI.py  washing_room.py
repl/: main.py  pyproject.toml  replit_zip_error_log.txt
repl/.cache/replit/nix/: env.json
repl/.config/chromium/Crash Reports/pending/: 143a7771-ad72-4e3d-9b15-318099438419.dmp  147159dd-2312-45e9-bb24-449cd1fa5e18.dmp  1d8f8184-e420-4227-9d07-0e4b116ec844.dmp  491afe4c-3fcf-4e60-a36c-40838908c07f.dmp  6d465c01-0bab-4577-94dc-84c22345a874.dmp  7e177053-3621-4b8e-b123-651a76224466.dmp  9c84b191-cbe8-4753-a3f9-467a59ca0660.dmp  9d9f05e6-5c32-4d78-a5dc-c365563d802e.dmp  a02cbd65-840b-4b72-860b-075a2f7d0284.dmp  c40da791-57f4-4b81-83b8-7d2af5deac30.dmp  c604840f-3522-463f-8ae9-be86c75a09ed.dmp
repl/.upm/: store.json
repl/calendar/: calendar.py
repl/cmds/: admin.py  news.py  transportation.py  washing.py
