[tool.poetry]
name = "repl_nix_Ahri"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.2"
pandas = "^1.4.2"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
selenium = "^4.2.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
